[package]
name = "re-cmp-engine-rust"
version = "0.1.0"
authors = ["Matthew Toohey <contact@mtoohey.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.66"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.84"

[profile.release]
opt-level = "z"
